--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CSS Selector Practice</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Show how to select elements by class, by type, by id. -->
@@ -44,6 +45,7 @@
             <li>I'm a better thing!</li>
         </ul>
       </div>
+      <p>Another PARAGRAPH</p>
     </div>
 
     <hr />
